<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/framLayoutFreg"
        android:layout_width="395dp"
        android:layout_height="338dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="238dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAddFreg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addFregmant1"
            android:text="@string/btnAddFreg1" />

        <Button
            android:id="@+id/btnAddFreg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addFregmant2"
            android:text="@string/btnAddFreg2" />

        <Button
            android:id="@+id/btnAddFreg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addFregmant3"
            android:text="@string/btnAddFreg3" />

        <Button
            android:id="@+id/btnReplaceFreg4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="replaceFregmant"
            android:text="@string/btnReplaceFreg4" />

        <Button
            android:id="@+id/btnRemoveFreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="removeFregmant"
            android:text="@string/btnRemoveFreg" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>